test/TestSuite/Scheduler/Errors/ts_alert2_more_details.tjp
project "test" 2009-11-30 +2m {
  trackingscenario plan
}

resource r1 "R1"

task t1 "Task 1" {
  effort 5d
  allocate r1
}

timesheet r1 2009-11-30 +1w {
# MARK: error 14 ts_alert2_more_details
  task t1 {
    work 2d
    remaining 0d
    status red "Some headline here!" {
      summary "I had good fun!"
    }
  }
}


